# actenon-cloud

./: .dockerignore  .env.compose.example  .env.example  .gitignore  ACCESS_AND_APPROVAL_BOUNDARIES.md  BACKUP_RESTORE_ASSUMPTIONS.md  BLOCKERS.md  BUYER_PROBLEM.md  COMMERCIAL_BASELINE.md  COMMERCIAL_MODEL_DRAFT.md  COMMERCIAL_README_ADDENDUM.md  COMMERCIAL_SURFACE_AUDIT.md  CONTAINERIZATION_PLAN.md  CONTROL_PLANE_RELEASE_READINESS.md  CUSTOMER_HANDOFF_GUIDE.md  CUSTOMER_INCIDENT_FLOW.md  CUSTOMER_OPERATING_MODEL.md  DATABASE_AND_MIGRATIONS.md  DEPLOYABILITY_AUDIT.md  DEPLOYMENT_AND_OPERATIONS_INDEX.md  DEPLOYMENT_TOPOLOGY.md  DEPLOYMENT_VERIFICATION.md  DESIGN_PARTNER_CONVERSATION_FLOW.md  DESIGN_PARTNER_FAQ.md  DESIGN_PARTNER_MEETING_PREP.md  DESIGN_PARTNER_ONE_PAGER.md  DESIGN_PARTNER_PILOT_OVERVIEW.md  DESIGN_PARTNER_VALUE_HYPOTHESIS.md  Dockerfile  EXTERNAL_DEPENDENCIES.md  GTM_ASSET_BUILD_ORDER.md  GTM_ASSET_GAP_MAP.md  GTM_WORKING_ASSUMPTIONS.md  HOSTED_PILOT_RUNTIME.md  HOSTED_PILOT_TOPOLOGY.md  HOSTED_PILOT_VERIFICATION_CHECKLIST.md  HOSTING_AND_DEPLOYMENT_STATUS.md  ICP_QUALIFICATION_RUBRIC.md  INCIDENT_TRIAGE_RUNBOOK.md  INFRASTRUCTURE_ASSUMPTIONS.md  (+57 more)
actenon_cloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: README.md  __init__.py  config.py  container.py  database.py  logging.py  main.py  metrics.py  telemetry.py
config/: alerts.yml
deploy/: README.md
docs/: ACCEPTANCE_CRITERIA.md  ACTION_INTENT_INTAKE_API.md  ADMIN_MODEL.md  APPROVAL_WORKFLOW.md  ARCHITECTURE.md  AUDIT_API.md  AUTH_MODEL.md  BREAK_GLASS_RUNBOOK.md  CAPABILITY_ESCROW.md  (+42 more)
(+190 files in other folders)
